added featured post

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             </div>  
             <section>
                     
+                        <h2><a href="https://www.industriallogic.com/blog/is-your-team-suddenly-distributed/">Is Your Team Suddenly Distributed?</a></h2>
+                        <p>Published on March 6, 2020 for <a href="https://www.industriallogic.com/blog">Industrial Logic Blog</a></p>
+                        <p> With the 2020 outbreak of the Coronavirus, many companies are implementing work-from-home policies. If you are a team that is suddenly converted from being co-located to distributed, here are some tips on staying productive. [&#8230;]</p>
+                    
                         <h2><a href="https://www.industriallogic.com/blog/characterization-testing-in-nuclear-power-and-software/">Characterization Testing in Nuclear Power and Software</a></h2>
                         <p>Published on January 28, 2020 for <a href="https://www.industriallogic.com/blog">Industrial Logic Blog</a></p>
                         <p> Characterization testing, aka Golden Master testing, is a technique where you apply known inputs to a process to verify the output against a known result. I have found this to be a great technique for testing legacy code that does not have many tests. However, my first use of this technique was at a nuclear power plant. [&#8230;]</p>
